# l2-transfer-matrix-method

./: .gitignore  .gitmodules  Data-version-2.csv  Live_Demo.ipynb  README.md  RecipeCurve.csv  encodersave  ml_attempt2.ipynb  ml_training.ipynb  nb1.ipynb  pyproject.toml  recipe.ipynb  reverse_ml.ipynb  savedmodel.h5
forward_model_v1_FINAL/: fingerprint.pb  keras_metadata.pb  saved_model.pb
forward_model_v1_FINAL/variables/: variables.data-00000-of-00001  variables.index
ml_model_forward/: __init__.py  model.py
reverse_model_medium_layers_no_dropout/: fingerprint.pb  keras_metadata.pb  saved_model.pb
reverse_model_medium_layers_no_dropout/variables/: variables.data-00000-of-00001  variables.index
reverse_model_v0.5_smaller_layers/: fingerprint.pb  keras_metadata.pb  saved_model.pb
reverse_model_v0.5_smaller_layers/variables/: variables.data-00000-of-00001  variables.index
reverse_model_v1_FINAL/: fingerprint.pb  materials.json  saved_model.pb
reverse_model_v1_FINAL/variables/: variables.index
reverse_model_v1_with_metrics/: keras_metadata.pb
reverse_model_v2_medium_layers_dropout/: fingerprint.pb  keras_metadata.pb  saved_model.pb
reverse_model_v2_medium_layers_dropout/variables/: variables.index
tmm_ml_model/: __init__.py
tmm_ml_models/: __init__.py  forward_model.py  reverse_model.py  serialisable_model.py
transfer_matrix_method/: __init__.py  dataReader.py  get_material_data.py  reflectance.py  refractive_index.py
transfer_matrix_method/data/: Acrylic.txt  AlCu.txt  CaF2.txt  Cellulose.txt  Co.txt  Cu.txt  Ge.txt  HfO2.txt  ITO.txt  W.txt  (+19 more)
