[tool.poetry]
name = "l2-transfer-matrix-method"
version = "0.1.0"
description = ""
authors = ["Charlie Kennedy <charleslloydkennedy@gmail.com>"]
packages = [
    { include="transfer_matrix_method" },
    { include="tmm_ml_model" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
PyYAML = "^6.0"
numpy = ">=1.22,<1.24"
matplotlib = "^3.7.1"
jupyter = "^1.0.0"
tmm = "^0.1.8"
scipy = "^1.10.1"
tensorflow = "^2.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
